--- a/components/Home/Home.css
+++ b/components/Home/Home.css
@@ -1,5 +1,5 @@
 .banner {
-  background-image: url("../../public/images/cover.png");
+  background-image: url("../../public/images/musuem3.jpg");
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
